# servant-hasql-realworld-example-app

./: .envrc.example  .ghci  .gitignore  .hlint.yaml  README.md  package.nix  servant-hasql-realworld-example-app.cabal  shell.nix
app/: Main.hs
database/: Main.hs
src/: Main.hs
src/RealWorld/Conduit/Articles/: Article.hs  Database.hs
src/RealWorld/Conduit/Articles/Database/: Sessions.hs  Statements.hs
src/RealWorld/Conduit/Database/: Schema.hs
src/RealWorld/Conduit/Users/: Database.hs  Profile.hs
src/Squeal/PostgreSQL/: Extended.hs
