name:          servant-hasql-realworld-example-app
version:       0.1.0.0
license:       BSD3
license-file:  LICENSE
author:        Brad Parker
maintainer:    hi@bradparker.com
build-type:    Simple
cabal-version: >=1.10

library servant-hasql-realworld-example-lib
  exposed-modules:
    RealWorld.Conduit.Articles.Article
    RealWorld.Conduit.Articles.Database
    RealWorld.Conduit.Database.Schema
    RealWorld.Conduit.Users.Profile
    RealWorld.Conduit.Users.Database
    Squeal.PostgreSQL.Extended
  build-depends:
    base >=4.11 && <4.12,
    bytestring,
    containers,
    contravariant,
    hasql,
    lens,
    squeal-postgresql,
    text,
    time
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  default-extensions:
    OverloadedStrings
    DataKinds
    OverloadedLabels
    OverloadedStrings
    TypeOperators
    TypeApplications
    ScopedTypeVariables

executable servant-hasql-realworld-example-app
  main-is:
    Main.hs
  build-depends:
    base >=4.11 && <4.12,
    bytestring,
    hasql,
    servant-hasql-realworld-example-lib
  hs-source-dirs:
    app
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  default-extensions:
    OverloadedStrings
    DataKinds
    OverloadedLabels
    OverloadedStrings
    TypeOperators
    TypeApplications
    TypeFamilies
    ScopedTypeVariables

executable servant-hasql-realworld-example-database
  main-is:
    Main.hs
  build-depends:
    base >=4.11 && <4.12,
    bytestring,
    hasql,
    process,
    squeal-postgresql,
    servant-hasql-realworld-example-lib
  hs-source-dirs:
    database
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  default-extensions:
    OverloadedStrings
    DataKinds
    OverloadedLabels
    OverloadedStrings
    TypeOperators
    TypeApplications
    TypeFamilies
    ScopedTypeVariables
