cabal-version: 2.2
name:          servant-hasql-realworld-example-app
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Brad Parker
maintainer:    hi@bradparker.com
build-type:    Simple

common base-dep
  build-depends:
    base >=4.11 && <4.12,

common ghc-config
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  default-extensions:
    DataKinds
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeOperators

library servant-hasql-realworld-example-lib
  import: base-dep
  import: ghc-config
  exposed-modules:
    RealWorld.Conduit.Articles.Article
    RealWorld.Conduit.Articles.Database
    RealWorld.Conduit.Articles.Database.Sessions
    RealWorld.Conduit.Articles.Database.Statements
    RealWorld.Conduit.Database.Schema
    RealWorld.Conduit.Users.Database
    RealWorld.Conduit.Users.Profile
    Squeal.PostgreSQL.Extended
  build-depends:
    bytestring,
    containers,
    contravariant,
    hasql,
    lens,
    squeal-postgresql,
    text,
    time,
    validation
  hs-source-dirs:
    src

executable servant-hasql-realworld-example-app
  import: base-dep
  import: ghc-config
  main-is:
    Main.hs
  build-depends:
    bytestring,
    hasql,
    servant-hasql-realworld-example-lib
  hs-source-dirs:
    app

executable servant-hasql-realworld-example-database
  import: base-dep
  import: ghc-config
  main-is:
    Main.hs
  build-depends:
    bytestring,
    hasql,
    network-uri,
    process,
    servant-hasql-realworld-example-lib,
    squeal-postgresql
  hs-source-dirs:
    database
